src/app/welcome/welcome.component.scss
@import '../../styles.scss';
.body {
  background: $primary;
  width: 100vw;
  height: 100vh;
  min-height: min-content;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  align-items: center;
  box-sizing: border-box;
  @media #{$desktop} {
    flex-direction: row;
    padding: 2vw;
  }
}

.text {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  @media #{$desktop} {
    flex-direction: column;
  }
}

.text__paragraph {
  margin: 2px;
  padding: 0px;
  text-align: center;
  width: 100%;
  font-size: 5.5vw;
  color: white;
  @media #{$landscape} {
    width: fit-content;
    font-size: 5vh;
  }
  @media #{$desktop} {
    text-align: left;
  }
}

.placeholder {
  height: 10vh;
  @media #{$landscape} {
    height: 2vh;
  }
  @media #{$tablet} {
    height: 10vw;
  }
  @media #{$notebook} {
    width: 7vh;
  }
  @media #{$desktop} {
    width: 3vw;
  }
}

.card {
  width: 100%;
  margin: 0;
  padding: 0;
  max-width: 400px;
  @media #{$landscape} {
    max-width: 500px;
  }
}

.form {
  padding: 15px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-content: center;
  align-items: center;
}

.form__field {
  width: 100%;
  @media #{$landscape} {
    padding: 0;
    margin: 0px;
  }
}

.form__button {
  width: 100%;
  @media #{$landscape} {
    width: 50%;
  }
}

.form__link {
  width: 100%;
  @media #{$landscape} {
    width: 50%;
  }
}

